crates/rattler_pypi_interop/src/python_env/snapshots/rattler_pypi_interop__python_env__distribution_finder__test__find_distributions@_windows_false.snap
---
source: crates/rattler_pypi_interop/src/python_env/distribution_finder.rs
expression: distributions
---
[
  Distribution(
    name: "click",
    version: "7.1.2",
    installer: Some("pip"),
    dist_info: "lib/python3.8/site-packages/click-7.1.2.dist-info",
    tags: Some([
      "py2-none-any",
      "py3-none-any",
    ]),
  ),
  Distribution(
    name: "flask",
    version: "1.1.4",
    installer: Some("pip"),
    dist_info: "lib/python3.8/site-packages/Flask-1.1.4.dist-info",
    tags: Some([
      "py2-none-any",
      "py3-none-any",
    ]),
  ),
  Distribution(
    name: "itsdangerous",
    version: "1.1.0",
    installer: Some("pip"),
    dist_info: "lib/python3.8/site-packages/itsdangerous-1.1.0.dist-info",
    tags: Some([
      "py2-none-any",
      "py3-none-any",
    ]),
  ),
]
